Updating the build from GZip to Disabled

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/gotta-move-build-temp.loader.js";
       var config = {
-        dataUrl: buildUrl + "/gotta-move-build-temp.data.gz",
-        frameworkUrl: buildUrl + "/gotta-move-build-temp.framework.js.gz",
-        codeUrl: buildUrl + "/gotta-move-build-temp.wasm.gz",
+        dataUrl: buildUrl + "/gotta-move-build-temp.data",
+        frameworkUrl: buildUrl + "/gotta-move-build-temp.framework.js",
+        codeUrl: buildUrl + "/gotta-move-build-temp.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "mixandjam-celestemovement",
