Updating build once again

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/gotta-move-build-temp.loader.js";
+      var loaderUrl = buildUrl + "/newTemp.loader.js";
       var config = {
-        dataUrl: buildUrl + "/gotta-move-build-temp.data",
-        frameworkUrl: buildUrl + "/gotta-move-build-temp.framework.js",
-        codeUrl: buildUrl + "/gotta-move-build-temp.wasm",
+        dataUrl: buildUrl + "/newTemp.data",
+        frameworkUrl: buildUrl + "/newTemp.framework.js",
+        codeUrl: buildUrl + "/newTemp.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "mixandjam-celestemovement",
